Add img folder to repo

--- a/recipes/grilled-cheese.html
+++ b/recipes/grilled-cheese.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Grilled Cheese Sandwich</h1>
-    <img src="../../../img/grilled-cheese.jpg" alt="Grilled Cheese Sandwich">
+    <img src="../img/grilled-cheese.jpg" alt="Grilled Cheese Sandwich">
     <h2>Cheeese Louise!</h2>
     <p>I hope this description is not too cheesy! So let's make a gouda job with this sandwich. A sandwich with such good flavor, you might loose your parmesan-ity!</p>
     <h3>Ingredients</h3>
