--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>World's Best Lasagna</h1>
-    <img src="../../../img/worlds-best-lasagna.jpg" alt="World's Best Lasagna">
+    <img src="../img/worlds-best-lasagna.jpg" alt="World's Best Lasagna">
     <h2>Lasagna sagna ZA!</h2>
     <p>Making a lasagna is time consuming, but the results are worth it. With a few ingredients you can make a dish that will position yourself as the <i>top dog</i> at the cookout! <strong>So let's get barking!</strong></p>
     <h3>Ingredients</h3>
