--- a/recipes/muffin.html
+++ b/recipes/muffin.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Banana Bread Muffin</h1>
-    <img src="../../../img/banana-bread-muffin.jpg" alt="Banana Bread Muffin">
+    <img src="../img/banana-bread-muffin.jpg" alt="Banana Bread Muffin">
     <h2>Banana Mia! Here I go again! Eating muffins!</h2>
     <p>This Banana Bread is great for people who like bananas, bread, or both!</p>
     <p>Monkeys may or may not enjoy it too, but we don't advice trying to feed one!</p>
